<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_dark_gray"
        android:title="@string/activity_bottom_nav_bar_text_search" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorite_gray_dark"
        android:title="@string/activity_bottom_nav_bar_text_favorites" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_dark_gray"
        android:title="@string/activity_bottom_nav_bar_text_create"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_post_dark_gray"
        android:title="@string/activity_bottom_nav_bar_text_posts"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profil_dark_gray"
        android:title="@string/activity_bottom_nav_bar_text_profile"
        app:labelVisibilityMode="labeled"/>

</menu>
