<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_modal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingLeft="25dp"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/color_white"
    tools:context=".activity.CreateUserActivity"
    >

    <TextView
        android:id="@+id/agenceImmobilier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="Agence immobiliere" />

    <TextView
        android:id="@+id/Mandataire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Mandataire" />

    <TextView
        android:id="@+id/PromoteurConstructeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Promoteur/Constructeur" />

    <TextView
        android:id="@+id/syndicGestionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/syndicGestionnaire" />

    <TextView
        android:id="@+id/marchandDeBien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/marchandDeBien" />

    <TextView
        android:id="@+id/architecte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/architecture" />

    <TextView
        android:id="@+id/autre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/autre" />

    <TextView
        android:id="@+id/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="30dp"
        android:onClick="onClick"
        android:text="@string/annuler"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp" />
</RelativeLayout>
