
<!-- -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_user_profesionnel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="visible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/call_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_horizontal_margin">


                <EditText
                    android:id="@+id/partTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="text"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/partTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_last_name"
                    android:inputType="text"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/partTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_mail"
                    android:inputType="text"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/partTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_phone"
                    android:inputType="phone"
                    android:textSize="14dp" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/parttextInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/partInputEditTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mot_de_passe"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="14dp"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/parttextInputPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/partInputEditTextPasswordConfirmed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/repeter_mot_de_passe"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/partTextPartenerCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/code_partner"
                    android:inputType="text"
                    android:textSize="14dp" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/partCreerCompte"
                    android:layout_width="fill_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_cyan_button"
                    android:text="@string/activity_create_account_title"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>



